  - Controller run each playbook in different venv.

2.10.1:
  - Fix bug of multi tenancy, if working offline use the plugin venv ansible-playbook executable and can't use "extra_packages".
2.11.0:
  - RD-469: Send JSON event to event log during execution.
  - RD-1610: Step through Ansible Tags.
2.11.1:
  - RD-2429: Permit no source on store facts.
2.12.0:
  - Add number_of_attempts property for playbooks executions.
2.12.1:
  - Install Ansible in deployment venv from wheel URL.
2.13.0:
  - RD-3031 Add Galaxy Collections Install.
2.13.1:
  - Enable suppressing some logs.
2.13.2:
  - Use general executor.
2.13.3:
  - Handle issue in install, where a relationship is used to create the ansible env and can break the deployment.
2.13.4:
  - Rerelease of 2.13.3 to distribute aarch64 wagon.
2.13.5:
  - Add Executor node type reload support.
2.13.6:
 - RD-3926 Validate parameters for ansible and ansible-playbook commands.
 - RD-3926 Fix store facts from kwargs
2.13.7: Update utilities SDK for PYYAML 6
2.13.8: Solve node instance version conflicts.
2.13.9:
  - RD-4902 provide parameters for Ansible reload workflow
  - Add v2_plugin.yaml
  - Add Node_Instance_Ids and Node_Ids type.
  - RD-5076 combine previous parameters with new parameters
2.13.10: Adjust V2 Plugin YAML invalid-types.
2.13.11: Correct default value for timeout.
2.13.12: Release DSL 1_4 yaml and redhat 8 wagon.
2.13.13: RD-4902 Align workflow parameters.
2.13.14: RD-5426 Add Custom facts path handling.
2.13.15: Handle ascii characters while setting up ansible venv.
2.13.16: Add environment variables that will support Cloudify Ansible Module.
2.13.17: Deprecate incorrect relationship names.
3.0.0: Change Ansible venv handling.
  - upgrade Ansible version to 4.10.0
  - add Ansible node for ansible binary installation and creation of shared pyenv (EaaS)
  - add property to use external pyenv for ansible
  - move precreate install operations to configure to allow copying pyenv from Ansible node in relationship